Add support for ribbon.